# rag-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/skills/rag-agent-backend/: SKILL.md
.github/workflows/: ci.yml  ruff.yml
rag_agent/: main.py
rag_agent/backend/app/: settings.py
rag_agent/backend/app/models/: chunk.py  document.py  embedding.py
rag_agent/backend/app/services/: document_processor.py  embedding_service.py  ingestion_service.py
rag_agent/backend/app/vector_store/: base.py  chromadb_store.py
rag_agent/tests/: conftest.py  test_chromadb_store.py  test_embedding_biencoder_crossencoder.py
rag_agent/tests/fixtures/: sample_doc.txt
